# Amethyst

./: ApplicationSettings_8hpp.html  ApplicationSettings_8hpp.js  ApplicationSettings_8hpp_source.html  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  Editor_2include_2Editor_2Application_8hpp.html  Editor_2include_2Editor_2Application_8hpp.js  Editor_2include_2Editor_2Application_8hpp_source.html  Editor_2include_2Editor_2Layer_8hpp.html  Editor_2include_2Editor_2Layer_8hpp.js  Editor_2include_2Editor_2Layer_8hpp_source.html  Editor_2src_2Application_8cpp.html  Editor_2src_2Layer_8cpp.html  Editor_2src_2Layer_8cpp.js  Engine_2include_2Engine_2Application_8hpp.html  Engine_2include_2Engine_2Application_8hpp.js  Engine_2include_2Engine_2Application_8hpp_source.html  Engine_2include_2Engine_2Layer_8hpp.html  Engine_2include_2Engine_2Layer_8hpp.js  Engine_2include_2Engine_2Layer_8hpp_source.html  Engine_2src_2Application_8cpp.html  Engine_2src_2Application_8cpp.js  Engine_2src_2Layer_8cpp.html  LayerStack_8cpp.html  LayerStack_8hpp.html  LayerStack_8hpp.js  LayerStack_8hpp_source.html  Logging_8cpp.html  Logging_8hpp.html  Logging_8hpp.js  Logging_8hpp_source.html  Main_8hpp.html  Main_8hpp.js  Main_8hpp_source.html  PCH_8hpp.html  PCH_8hpp_source.html  README.md  README_8md.html  Sandbox_2include_2Sandbox_2Application_8hpp.html  (+89 more)
.github/workflows/: Build.yml  Documentation.yml  Matrix.yml  SonarCloud.yml  build.yml  cmake.yml  doxygen.yml
Editor/: CMakeLists.txt
Editor/include/Editor/: Application.hpp  Editor.hpp  EditorLayer.hpp  Layer.hpp
Editor/src/: Application.cpp  Editor.cpp  EditorLayer.cpp  Layer.cpp
Engine/: CMakeLists.txt
Engine/include/: Amethyst.hpp  PCH.hpp  PrecompiledHeader.hpp
Engine/include/Amethyst/: Application.hpp  ApplicationSettings.hpp  Layer.hpp  LayerStack.hpp  Logging.hpp  Main.hpp  Shader.hpp
Engine/include/Engine/: Application.hpp  ApplicationSettings.hpp  LayerStack.hpp  Logging.hpp  Main.hpp
Engine/src/: Application.cpp  Layer.cpp  LayerStack.cpp  Logging.cpp  Shader.cpp
Sandbox/: CMakeLists.txt
Sandbox/include/Sandbox/: Application.hpp  Layer.hpp  Sandbox.hpp  SandboxLayer.hpp
Sandbox/src/: Application.cpp  Layer.cpp  Sandbox.cpp  SandboxLayer.cpp
search/: all_0.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js
